# lp-cli

./: .gitignore  README.md  setup.cfg  setup.py
LpCli/: lp_bug.py  lp_cli.py
tests/: conftest.py  test_lp_bug.py  test_lp_cli.py
