[metadata]
name = LpCli
version = 0.1
description = A Command Line helper to get data out of LaunchPad.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mclemenceau/lp-cli
project_urls =
    Bug Reports = https://github.com/mclemenceau/lp-cli/issues
    Source Code = https://github.com/mclemenceau/lp-cli
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    launchpadlib

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    lp-cli = LpCli.lp_cli:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = LpCli
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
